# weather-tracker

./: .gitignore  Dockerfile  README.md  alembic.ini  compose.dev.yaml  compose.prod.yaml  pyproject.toml  test.env
alembic/: env.py
alembic/versions/: 2025-04-24_initial.py
frontend/static/: cards.js  index.js  login.js  register.js  style.css
frontend/templates/: index.html  register.html
tests/integration/: conftest.py  test_api.py
tests/units/application/: conftest.py  mocks.py  test_location.py  test_user.py
tests/units/domain/: test_entities.py
tests/units/infrastructure/: conftest.py  mocks.py  test_gateways.py  test_weather_client.py
weather_tracker/: app.py  config.py  ioc.py  logger.py
weather_tracker/application/: dto.py  exceptions.py  interfaces.py  use_cases.py
weather_tracker/domain/: entities.py  exceptions.py  value_objects.py
weather_tracker/infrastructure/: hash_service.py  session_gateway.py
weather_tracker/infrastructure/database/: __init__.py  gateways.py  orm_models.py  session.py
weather_tracker/infrastructure/external_api/: open_weather_client.py  schemas.py
weather_tracker/infrastructure/httpl_client/: aiohttp_client.py  interfaces.py
weather_tracker/presentation/: exception_handlers.py  handlers.py  middlewares.py  schemas.py
