[tool.poetry]
name = "weather-tracker"
version = "0.1.0"
description = ""
authors = ["ratmeow <rtm_bis@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.3"
dotenv = "^0.9.9"
aiohttp = "^3.11.16"
bcrypt = "^4.3.0"
sqlalchemy = "^2.0.40"
redis = "^5.2.1"
fastapi = "^0.115.12"
dishka = "^1.5.3"
uvicorn = "^0.34.2"
asyncpg = "^0.30.0"
alembic = "^1.15.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.26.0"
aiosqlite = "^0.21.0"
fakeredis = {extras = ["async"], version = "^2.28.1"}


[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
ruff = "^0.11.7"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["F401"]

[tool.mypy]
python_version = "3.12"